feat : 유저 닉네임 수정 앤드포인트&테스트 추가